# learn-python

./: README.md  Road_map.md  Teach.md  installation.md  libraries.md  math_for_ai_ml.md
core/00_hello_world/: hello_world.py
core/01_basics/: 01_data_types.py  02_operators.py  03_functions.py  04_casting.py  05_strings.py  06_math_functions.py
core/02_conditional_statements/: 01_if_else.py  02_loops.py  03_ternary.py  04_switch_match.py
core/03_modules/: main.py
core/04_exception_handling/: exception_handling.py
core/05_advance/: 01_list_tuple_dict_set.py  02_file_handling.py  03_oop_classes_objects.py  README.md
core/teach/: README.md  data_types.py  hello.py
matplotlib/: READEME.md  main.ipynb  population_animation.py  tutorial.ipynb
numpy/: .gitignore  01_array_all.py  02_array_creation.py  03_array_indexing.py  04_array_math.py  05_array_broadcasting.py  06_aggregate_functions.py  07_filtering_arrays.py  08_random_numbers.py  README.md  numpy_practice.ipynb
pandas/: READEME.md  main.ipynb  requirements.txt  tutorial.ipynb
pandas/data/: users.json
projects/: README.md
projects/api-client/: .gitignore  pyproject.toml
projects/calculator/: .gitignore  main.py
projects/uv-api-client/: main.py  pyproject.toml
scikit-bsics/: .gitignore  README.md  main.ipynb  main.py  pyproject.toml
scipy-learn/: README.md  main.ipynb  main.py  pyproject.toml
